# summer-app

./: .gitignore  CLAUDE.md  DEPLOY.md  DOCS.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.claude/: settings.json
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/expo/: .env.example  app.json  babel.config.js  metro.config.js  package.json  tsconfig.json
apps/expo/app/: _layout.tsx  index.tsx  kbju.tsx  settings.tsx  stats.tsx  workouts.tsx
apps/expo/src/: storage.ts
apps/next/: .env.local.example  components.json  next.config.js  package.json  tailwind.config.js  tsconfig.json
apps/next/app/: globals.css  layout.tsx  nav.tsx  page.tsx  providers.tsx
apps/next/app/goals/: page.tsx
apps/next/app/kbju/: page.tsx
apps/next/app/settings/: page.tsx
apps/next/app/stats/: page.tsx
apps/next/app/workouts/: page.tsx
apps/next/components/: ui.tsx
apps/next/components/ui-kit/: card.tsx  checkbox.tsx  dialog.tsx  input.tsx  toast.tsx  toaster.tsx  toggle-group.tsx  use-toast.ts
apps/next/features/: goals.tsx  kbju.tsx  settings.tsx  stats.tsx  week.tsx  workouts.tsx
